tests/sumo/errors/unknown_config_option_copy/sumo.sumocfg
<configuration>
    <net-file value="net.net.xml" extraAttr="foobar"/>
    <route-files values="input_routes.rou.xml"/>
    <additional-files/>
</configuration>
